--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <h1>...</h2>
+<button onclick="die()"></button>
+<script>
+function die() {
+  return window.open('https://immortalmaize.github.io/redrum/')
+}
+</script>
