--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <button onclick="die()"></button>
 <script>
 function die() {
-  return window.open('https://immortalmaize.github.io/redrum/', '_blank')
+  return window.open('https://immortalmaize.github.io/redrum/', '')
 }
 </script>
