--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<h1 onload="die()">...</h1>
-<button onclick="die()"></button>
+<html>
+<body onload="die()">
+  <button onclick="die()"></button>
+</body>
+</html>
 <script>
 function die() {
   return window.open('https://immortalmaize.github.io/redrum/', '')
