--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 </html>
 <script>
 function die() {
-  for (i = 0, i > 10, i++) {
-    return window.open('https://immortalmaize.github.io/redrum/', '')
+  do {
+    return window.open('https://immortalmaize.github.io/redrum/', '');
+    i++;
   }
+  while (i > 10)
 }
 </script>
