--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ function die() {
     return window.open('https://immortalmaize.github.io/redrum/', '');
     i++;
   }
-  while (i > 10)
+  while (i < 10)
 }
 </script>
