--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
 <body onload="die()">
-  <h1>:/</h1>
+  <h1>=I</h1>
 </body>
 </html>
 <script>
 function die() {
-  do {
-    return window.open('https://immortalmaize.github.io/redrum/', '');
-    i++;
+  window.open('https://immortalmaize.github.io/redrum/', '');
+  location.reload();
   }
   while (i < 10)
 }
