--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
-<body style="background: black;">
-<div id="app" style="color: white; font-family: 'Times';" v-on:load="die()">
+<div>
+<body style="background: black;" id="app" style="color: white; font-family: 'Times';" v-on:load="die()">
 <h1 style="font-weight: normal;">{{ word }}</h1>
 {{ music }}
-</div>
+
 </body>
+</div>
 </html>
 
 <script type="module">
