--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <div id="app" style="color: white; font-family: Times;">
 <h1 style="font-weight: normal;">{{ word }}</h1>
 {{ music }}
+<embed src="./BeepBox-Song.wav" autoplay="true">
 </div>
 </body>
 </html>
