--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <body style="background: black;" onload="die()">
 <div id="app" style="color: white; font-family: Times;">
 <h1 style="font-weight: normal;">{{ word }}</h1>
-{{ music }}
-<embed :src="./BeepBox-Song.wav" autoplay="true" loop="true">
+<embed :src="music" autoplay="true" loop="true">
 </div>
 </body>
 </html>
