--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@ new Vue({
 <script>
 function die() {
 			window.open('https://immortalmaize.github.io/redrum/', '');
-  location.reload();
+//  location.reload();
 }</script>
