--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@ new Vue({
 <script>
 function die() {
 			window.open('https://immortalmaize.github.io/redrum/', '');
+	window.open('https://immortalmaize.github.io/redrum/', '');
+	window.open('https://immortalmaize.github.io/redrum/', '');
+	window.open('https://immortalmaize.github.io/redrum/', '');
+	window.open('https://immortalmaize.github.io/redrum/', '');
 //  location.reload();
 }</script>
