--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ new Vue({
 			chance == 3 ? './GET SICK.wav' :
 			chance == 4 ? './Showtime.wav' :
 			chance == 5 ? './This beat is too... filthy..wav' :
-			'./BeepBox-Song.wav')
+			chance == 6 ? './BeepHub Community.wav' :
+			chance == 7 ? './doki doki.wav' :
+			chance == 8 ? './dunkenlovania.wav' :
+			chance == 9 ? './i am not looking i do not see.wav' :
+			'./mouse fan club.wav')
 		}
 	},
 	methods: {
@@ -32,9 +36,9 @@ new Vue({
 </script>
 <script>
 function die() {
-			window.open('https://immortalmaize.github.io/redrum/', '');
-	window.open('https://immortalmaize.github.io/redrum/', '');
-	window.open('https://immortalmaize.github.io/redrum/', '');
+			window.open('https://immortalmaize.github.io/redrum/', '', '', '');
+	window.open('https://immortalmaize.github.io/redrum/', '', '', '');
+	window.open('https://immortalmaize.github.io/redrum/', '', '', '');
 	window.open('https://immortalmaize.github.io/redrum/', '');
 	window.open('https://immortalmaize.github.io/redrum/', '');
 //  location.reload();
